# Capstone_Test1

./: .docrot-config.json  .docrot-fingerprints.json  .docrot-report.json  .docrot-report.txt  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: docrot.yml
src/: App.tsx
src/components/: ConfirmDialog.tsx  FiltersBar.tsx  TodoApp.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
src/hooks/: useLocalStorage.ts  useTodos.ts
src/services/: todosStorage.ts
src/simple_todo/: __init__.py  cli.py  models.py  service.py  storage.py  validators.py
src/simple_todo_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/types/: todo.ts
src/utils/: date.ts  id.ts  validation.ts
tests/: test_service.py  todosStorage.test.ts  useTodos.test.ts
