[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-todo-python"
version = "0.1.0"
description = "A simple Python todo project with JSON storage and CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Capstone Test" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
todo = "simple_todo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]